plugins {
	id "io.spring.dependency-management" version "1.0.13.RELEASE"
}

subprojects {
	group = 'com.projectX'
	version = '0.0.1-SNAPSHOT'


	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'java-library'

	repositories {
		mavenCentral()
		maven { url 'https://plugins.gradle.org/m2/' }
	}

	dependencyManagement {
		imports {
			mavenBom("org.springframework.boot:spring-boot-dependencies:2.7.3")
		}
	}

	compileJava {
		sourceCompatibility = 17
		targetCompatibility = 17
	}
}